--- a/web/src/pages/Registration/style.scss
+++ b/web/src/pages/Registration/style.scss
@@ -1,105 +1,3 @@
-/*
-body {
-  //line-height: 1;
-  //font-size: 16px;
-  color: white;
-  font-weight: 500;
-  font-family: Montserrat;
-  position: absolute;
-  width: 1920px;
-  height: 1280px;
-  left: 0px;
-  top: 0px;
-  //background: url("darkTheme.jpg");
-
-}
-
-.wrapper {
-  min-height: 100%;
-  overflow: hidden;
-
-}
-
-.header{
-
-  &__logo{
-    position: absolute;
-    width: 446px;
-    height: 76px;
-    left: 157px;
-    top: 45px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 48px;
-    line-height: 59px;
-    color: #FFFFFF;
-
-  }
-  &-img{
-    position: absolute;
-    width: 110px;
-    height: 128.6px;
-    left: 47px;
-    top: 16px;
-
-    //background: url(user-astronaut-solid.png);
-  }
-}
-
-.form{
-  position: absolute;
-  width: 801px;
-  height: 895px;
-  left: 554px;
-  top: 193px;
-  background: linear-gradient(180deg, #69AEC5 0%, rgba(29, 74, 115, 0.25) 100%);
-  border: 1px solid #E5E5E5;
-  box-sizing: border-box;
-
-  &__fields{
-
-  }
-  &__field{
-    position: absolute;
-    align-content: center;
-    width: 625px;
-    height: 8px;
-    border-bottom: 4px solid white;
-    //left: 647px;
-    //top: 533px;
-    background: white;
-    transform: matrix(1, 0, 0, -1, 0, 0);
-    &:active{
-      border-bottom: 4px solid #FF9C32;
-    }
-
-  }
-  &__input{
-    font-size: 64px;
-    line-height: 78px;
-    font-style: normal;
-    font-weight: normal;
-    &:active{
-      text-decoration-color: #FF9C32;
-    }
-
-  }
-  &__button{
-    position: absolute;
-    width: 378px;
-    height: 74px;
-    left: 770px;
-    top: 913px;
-
-    &-register{
-      background: #FF9C32;
-      box-shadow: 4px 4px 4px #69AEC5;
-
-    }
-  }
-}
-*/
-
 body{
   margin: 0;
   padding: 0;
@@ -126,18 +24,32 @@ body{
   border: 1px solid #ffffff;
 
   div{
+    margin: 40px 0;
+    font-weight: 400;
+    letter-spacing: 2px;
+    font-size: 15px;
+
+    a{
+      color: #ff0000;
+      text-decoration: none;
+    }
+  }
+
+  h1{
   margin: 40px 0;
   text-transform: uppercase;
   font-weight: 400;
-    letter-spacing: 2px;
+  letter-spacing: 2px;
+  font-size: 30px;
+
   }
 }
 
-.box input.text,.box input[type = "password"]{
+.box .pass{
   border: 0;
   background: none;
   display: block;
-  margin: 15px auto;
+  margin: 0px auto;
   text-align: center;
   padding: 14px 10px;
   width: 300px;
@@ -148,8 +60,34 @@ body{
   border-bottom: 0.1px solid #fff;
 }
 
+.text{
+  border: 0;
+  background: none;
+  display: block;
+  margin: 0px auto;
+  text-align: center;
+  padding: 14px 10px;
+  width: 300px;
+
+  font-size: 20px;
+  color: white;
+
+  border-bottom: 0.1px solid #fff;
+}
+
+.box .box__pass{
+  display: flex;
+  align-items: center;
+
+}
+
+.box .checkbox{
+  width: 10px;
+  position: absolute;
+  right: 105px;
+}
+
 .box input[type = 'submit']{
-  margin-top: 20px;
   background: #ffffff;
   width: 200px;
 
@@ -165,11 +103,12 @@ body{
 }
 
 .box input[type = 'submit']:hover{
-  outline: 3px solid #c77f00;
+  outline: 2px solid #fff;
+  background: #ffb1b1;
   cursor: pointer;
 }
 
 .box input[type = 'submit']:active{
-  background: #c77f00;
-  outline: 3px solid #c77f00;
+  background: #ff0000;
+  border: 1px solid #ff0000;
 }
